--- a/FileProcessorConsoleApp/FileProcessorConsoleApp/FileProcessorConsoleApp.csproj
+++ b/FileProcessorConsoleApp/FileProcessorConsoleApp/FileProcessorConsoleApp.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
   </ItemGroup>
 
