--- a/FileProcessorConsoleApp/FileProcessorConsoleApp/FileProcessorConsoleApp.csproj
+++ b/FileProcessorConsoleApp/FileProcessorConsoleApp/FileProcessorConsoleApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
   </ItemGroup>
 
